Опечатка в документации была исправлена + доуказан параметр
