# cmd/r-vBackend/docs/swagger.yaml
@@ -153,7 +153,7 @@ definitions:
     properties:
       login:
         type: string
-      passwrod:
+      password:
         type: string
     type: object
 host: localhost:8081
@@ -200,6 +200,11 @@ paths:
   /api/commands:
     get:
       description: Получить все неудалённые команды. Доступно любому пользователю.
+      parameters:
+      - description: поисковый запрос
+        in: path
+        name: query
+        type: string
       produces:
       - application/json
       responses:
